--- a/rock-paper-scissors/index.html
+++ b/rock-paper-scissors/index.html
@@ -1,54 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Rock Paper Scissors</title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,700" rel="stylesheet">
-    <link rel="stylesheet" href="styles/main.css">
-</head>
-<body>
-    <header>
-        <h1>Rock Paper Scissors</h1>
-    </header>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <title>Rock Paper Scissors</title>
+        <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,700" rel="stylesheet">
+        <link rel="stylesheet" href="styles/main.css">
+    </head>
+    <body>
+        <header>
+            <h1>Rock Paper Scissors</h1>
+        </header>
 
-    <main>
-        <div class="score-board">
-            <div class="badge user">
-                User
+        <main>
+            <div class="score-board">
+                <div class="badge user">
+                    User
+                </div>
+
+                <div class="badge comp">
+                    Comp
+                </div>
+
+                <div class="score"><span class="user-score">0</span> : <span class="comp-score">0</span></div>
             </div>
 
-            <div class="badge comp">
-                Comp
+            <div class="result">
+                <p>Hello! Let's start the game! <sub>=)</sub></p>
             </div>
 
-            <div class="score"><span class="user-score">0</span> : <span class="comp-score">0</span></div>
-        </div>
+            <ul class="choises__list">
+                <li class="choises__item choises__item_rock" id="Rock">
+                    <img src="images/hand-rock.svg" alt="Rock">
+                </li>
 
-        <div class="result">
-            <p>Paper covers rock! You win!</p>
-        </div>
+                <li class="choises__item choises__item_paper" id="Paper">
+                    <img src="images/hand-paper.svg" alt="Paper">
+                </li>
 
-        <ul class="choises__list">
-            <li class="choises__item choises__item_rock">
-                <img src="images/hand-rock.svg" alt="Rock">
-            </li>
+                <li class="choises__item choises__item_scissors" id="Scissors">
+                    <img src="images/hand-scissors.svg" alt="Scissors">
+                </li>
+            </ul>
 
-            <li class="choises__item choises__item_paper">
-                <img src="images/hand-paper.svg" alt="Paper">
-            </li>
+            <p class="action-message">
+                Make your move.
+            </p>
+        </main>
 
-            <li class="choises__item choises__item_scissors">
-                <img src="images/hand-scissors.svg" alt="Scissors">
-            </li>
-        </ul>
-
-        <p class="action-message">
-            Make your move.
-        </p>
-    </main>
-
-    <script src="scripts/app.js"></script>
-</body>
+        <script src="scripts/app.js" defer></script>
+    </body>
 </html>
