--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
         <li>
             <a href="/rock-paper-scissors/">Rock Paper Scissors</a>
         </li>
+        <li>
+            <a href="/snake/">Snake</a>
+        </li>
     </ul>
 </body>
 </html>
