added link on index

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
                     <li class="project__item">
                         <a class="project__link" href="/snake/">Snake</a>
                     </li>
+                    <li class="project__item">
+                        <a class="project__link" href="/countdown-timer/">Timer</a>
+                    </li>
                 </ul>
             </div>
         </main>
