publisg memory game

--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
                     <li class="project__item">
                         <a class="project__link" href="/countdown-timer/">Timer</a>
                     </li>
+                    
+                    <li class="project__item">
+                        <a class="project__link" href="/memory-game/">Memory Game</a>
+                    </li>
                 </ul>
             </div>
         </main>
