added some new projects

--- a/index.html
+++ b/index.html
@@ -33,6 +33,18 @@
                     <li class="project__item">
                         <a class="project__link" href="/memory-game/">Memory Game</a>
                     </li>
+
+                    <li class="project__item">
+                        <a class="project__link" href="/quote-gen/">Quote Gen</a>
+                    </li>
+
+                    <li class="project__item">
+                        <a class="project__link" href="/infinite-scroll/">Infinite Scroll</a>
+                    </li>
+
+                    <li class="project__item">
+                        <a class="project__link" href="/picture-in-picture/">Picture in Picture</a>
+                    </li>
                 </ul>
             </div>
         </main>
