--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <title>Denys Tkachuk</title>
     <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:100,400,700" rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/main.min.css">
+    <link rel="stylesheet" href="assets/styles/main.css">
 </head>
 <body>
     <div class="wrapper">
