added light dark mode

--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
                     <li class="project__item">
                         <a class="project__link" href="/picture-in-picture/">Picture in Picture</a>
                     </li>
+
+                    <li class="project__item">
+                        <a class="project__link" href="/light-dark-mode/">Light Dark Mode</a>
+                    </li>
                 </ul>
             </div>
         </main>
